--- a/package.json
+++ b/package.json
@@ -27,12 +27,12 @@
   "author": "David Tabaka <dabakovich@gmail.com>",
   "license": "MIT",
   "devDependencies": {
-    "@types/diff": "^4.0.2",
-    "@types/jest": "^26.0.19",
-    "@types/react-native": "0.63.2",
-    "jest": "26.6.3",
-    "ts-jest": "^26.4.4",
-    "typescript": "4.0.5"
+    "@types/diff": "4.0.2",
+    "@types/jest": "26.0.23",
+    "@types/react-native": "0.57.*",
+    "jest": "27.0.4",
+    "ts-jest": "27.0.3",
+    "typescript": "4.3.4"
   },
   "peerDependencies": {
     "react": ">=16.0",
